Inserindo dependência jackson-databind, Desativando autoconfiguração do Spring.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=challengeJavaLiteralura
+#usada em projetos Spring Boot para desativar a autoconfiguração de classes específicas fornecidas pelo Spring Boot.
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+
